test/regress/regress-13.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module (test))
(;; STDERR ;;;
out/test/regress/regress-13.txt:3:10: error: unexpected token "test", expected a module field.
(module (test))
         ^^^^
;;; STDERR ;;)
